--- a/webapp/WEB-INF/templates/admin/plugins/workflow/modules/automaticassignment/task_config.html
+++ b/webapp/WEB-INF/templates/admin/plugins/workflow/modules/automaticassignment/task_config.html
@@ -12,9 +12,9 @@
 </#function>
 
 <div>
-	<h2> #i18n{module.workflow.taskautomaticassignment.task_config.title}</h2> 	
+	<h2> #i18n{module.workflow.automaticassignment.task_config.title}</h2> 	
 	  	<p>
-	    	<label for="title">#i18n{module.workflow.taskautomaticassignment.task_config.label_title} * :</label>
+	    	<label for="title">#i18n{module.workflow.automaticassignment.task_config.label_title} * :</label>
 	    		<#if config?exists && config.title??>
 		     			  <input type="text" name="title" id="" size="80" value="${config.title}"  maxlength="255"/>
 		     	<#else>
@@ -22,33 +22,33 @@
 		     	</#if>	
 		    <br/>
 			<label>&nbsp;</label>
-			#i18n{module.workflow.taskautomaticassignment.task_config.label_title}
+			#i18n{module.workflow.automaticassignment.task_config.label_title}
 		</p>
 		
 		<p>
-			 <label for="directory">#i18n{module.workflow.taskautomaticassignment.task_config.label_directory} :</label>
+			 <label for="directory">#i18n{module.workflow.automaticassignment.task_config.label_directory} :</label>
    		 		<@combo 'directory' config.idDirectory directory_list />
-   		 		<input class="button" type="submit" name="apply" value="#i18n{module.workflow.taskautomaticassignment.task_config.update_button}" />	
+   		 		<input class="button" type="submit" name="apply" value="#i18n{module.workflow.automaticassignment.task_config.update_button}" />	
    				<br/>
- 			 <label>&nbsp;</label> #i18n{module.workflow.taskautomaticassignment.task_config.label_directory_comment}
+ 			 <label>&nbsp;</label> #i18n{module.workflow.automaticassignment.task_config.label_directory_comment}
 	 	</p>
 	 	<#if config??>	
 	 		<#if config.entryList??>
 	 			<div class="highlight-box">
-	 				<h2>#i18n{module.workflow.taskautomaticassignment.task_config.entry_list.title}</h2>
+	 				<h2>#i18n{module.workflow.automaticassignment.task_config.entry_list.title}</h2>
 	 				<#if config.entryList?size = 0>
-	 					#i18n{module.workflow.taskautomaticassignment.task_config.entry_list.label.noentry}
+	 					#i18n{module.workflow.automaticassignment.task_config.entry_list.label.noentry}
 	 				<#else>	 				
 		 				<table>
 							<tr>
-								<th>#i18n{module.workflow.taskautomaticassignment.task_config.label.entry}</th>						
-								<th>#i18n{module.workflow.taskautomaticassignment.task_config.label.actions}</th>
+								<th>#i18n{module.workflow.automaticassignment.task_config.label.entry}</th>						
+								<th>#i18n{module.workflow.automaticassignment.task_config.label.actions}</th>
 							</tr>
 			 				<#list config.entryList as entry>
 							 	<tr>
 							 		<td>${entry.title}</td>							 		
 							 		<td>	
-							 			<a href="jsp/admin/plugins/workflow/modules/taskautomaticassignment/ModifyEntryAssignment.jsp?id_task=${config.idTask}&id_entry=${entry.idEntry}" > 
+							 			<a href="jsp/admin/plugins/workflow/modules/automaticassignment/ModifyEntryAssignment.jsp?id_task=${config.idTask}&id_entry=${entry.idEntry}" > 
 							 				<img src="images/admin/skin/actions/modify.png" class="icon" alt="" title="" /> 
 							 			</a>
 							 		</td>
@@ -61,7 +61,7 @@
 		 	</#if>
 	 	</#if>	 	
 	 	<p>
-	 		<label for="is_notify">#i18n{module.workflow.taskautomaticassignment.task_config.label_notification} :</label>
+	 		<label for="is_notify">#i18n{module.workflow.automaticassignment.task_config.label_notification} :</label>
 	 		<#if config?exists && config.notify>
 	 			<input type="checkbox" name="is_notify" value="1" checked="checked" onclick="javascript:notification();" />
    		 	<#else>
@@ -71,7 +71,7 @@
 		</p>
 		<div id="notification">
 	    	<p>
-	    		<label for="">#i18n{module.workflow.taskautomaticassignment.task_config.label_mapping_workgroup_mailing_list} :</label>
+	    		<label for="">#i18n{module.workflow.automaticassignment.task_config.label_mapping_workgroup_mailing_list} :</label>
 	    		<#assign is_first = true>
 				<#list workgroup_list as workgroup>
 					<#if !is_first>
@@ -83,7 +83,7 @@
 						<#if workgroup.config?exists> checked="checked" </#if> />
 					${workgroup.item.description}
 					&nbsp;&nbsp;&nbsp;&nbsp;
-					#i18n{module.workflow.taskassignment.task_assignment_config.label_notification} :
+					#i18n{module.workflow.assignment.task_assignment_config.label_notification} :
 					<#if workgroup.config?exists>
 						<@combo name="id_mailing_list_${workgroup.item.key}" items=mailing_list default_value=workgroup.config.idMailingList />
 					<#else>
@@ -93,7 +93,7 @@
 		   		</#list>
    			</p>
 		 	<p>
-				 <label for="sender_name">#i18n{module.workflow.taskautomaticassignment.task_config.label_user_name} * :</label>
+				 <label for="sender_name">#i18n{module.workflow.automaticassignment.task_config.label_user_name} * :</label>
 	   		 		<#if config?exists&&config.senderName?exists>
 	   		 			<input type="text" name="sender_name" id="" size="80" value="${config.senderName}" maxlength="255" />
 	   		 		<#else>
@@ -101,10 +101,10 @@
 	   		 		</#if>
 	   				<br/>
 	   				 <label>&nbsp;</label>
-				#i18n{module.workflow.taskautomaticassignment.task_config.label_user_name_comment}
+				#i18n{module.workflow.automaticassignment.task_config.label_user_name_comment}
 		 	</p>
 		 	<p>
-				<label for="recipients_cc">#i18n{module.workflow.taskautomaticassignment.task_config.label_recipients_cc} :</label>
+				<label for="recipients_cc">#i18n{module.workflow.automaticassignment.task_config.label_recipients_cc} :</label>
 				<#if config?exists && config.recipientsCc?has_content>
 			    	<input type="text" name="recipients_cc" id="" size="80" value="${config.recipientsCc}"  maxlength="255"/>
 			    <#else>
@@ -112,11 +112,11 @@
 			    </#if>
 			    <br/>
 				<label>&nbsp;</label>
-				#i18n{module.workflow.taskautomaticassignment.task_config.label_recipients_cc_comment}
+				#i18n{module.workflow.automaticassignment.task_config.label_recipients_cc_comment}
 			</p>
 			
 			<p>
-				<label for="recipients_bcc">#i18n{module.workflow.taskautomaticassignment.task_config.label_recipients_bcc} :</label>
+				<label for="recipients_bcc">#i18n{module.workflow.automaticassignment.task_config.label_recipients_bcc} :</label>
 				<#if config?exists && config.recipientsBcc?has_content>
 			    	<input type="text" name="recipients_bcc" id="" size="80" value="${config.recipientsBcc}"  maxlength="255"/>
 			    <#else>
@@ -124,10 +124,10 @@
 			    </#if>
 			    <br/>
 				<label>&nbsp;</label>
-				#i18n{module.workflow.taskautomaticassignment.task_config.label_recipients_bcc_comment}
+				#i18n{module.workflow.automaticassignment.task_config.label_recipients_bcc_comment}
 			</p>
 		 	<p>
-		    	<label for="suject">#i18n{module.workflow.taskassignment.task_assignment_config.label_subject} * :</label>
+		    	<label for="suject">#i18n{module.workflow.assignment.task_assignment_config.label_subject} * :</label>
 			    	<#if config?exists&&config.subject?exists>
 			     			<input type="text" name="subject" id="" size="80" value="${config.subject}"  maxlength="255"/>
 			     	<#else>
@@ -135,10 +135,10 @@
 			     	</#if>		
 				   <br/>
 				  <label>&nbsp;</label>
-				#i18n{module.workflow.taskassignment.task_assignment_config.label_subject_comment}
+				#i18n{module.workflow.assignment.task_assignment_config.label_subject_comment}
 			</p>
 		 	<p>
-		    	<label for="message">#i18n{module.workflow.taskassignment.task_assignment_config.label_message} * :</label>
+		    	<label for="message">#i18n{module.workflow.assignment.task_assignment_config.label_message} * :</label>
 		    		<div class="editor">
 				    	<#if config?exists && config.message?exists>
 							<textarea name="message" id="" rows="5" cols="80" class="richtext">${config.message}</textarea>
@@ -148,18 +148,18 @@
 					</div>
 				   <br/>
 				  <label>&nbsp;</label>
-				#i18n{module.workflow.taskassignment.task_assignment_config.label_message_comment}
+				#i18n{module.workflow.assignment.task_assignment_config.label_message_comment}
 			</p>
 			<#if full_entry_list??>
 		 		<div class="highlight-box">
-		 			<h2>#i18n{module.workflow.taskautomaticassignment.task_config.full_entry_list.title}</h2>
+		 			<h2>#i18n{module.workflow.automaticassignment.task_config.full_entry_list.title}</h2>
 		 			<#if full_entry_list?size = 0>
-		 					#i18n{module.workflow.taskautomaticassignment.task_config.entry_list.label.noentry}
+		 					#i18n{module.workflow.automaticassignment.task_config.entry_list.label.noentry}
 	 				<#else>	 				
 		 				<table>
 							<tr>
-								<th>#i18n{module.workflow.taskautomaticassignment.task_config.label.entry}</th>						
-								<th>#i18n{module.workflow.taskautomaticassignment.task_config.label.freemarker}</th>
+								<th>#i18n{module.workflow.automaticassignment.task_config.label.entry}</th>						
+								<th>#i18n{module.workflow.automaticassignment.task_config.label.freemarker}</th>
 								
 							</tr>
 			 				<#list full_entry_list as entry>
@@ -178,11 +178,11 @@
 		 	</#if>
 		 	<#if list_entries_file?? && list_entries_file?has_content>
 		 		<div class="highlight-box">
-		 			<h2>#i18n{module.workflow.taskautomaticassignment.task_config.label_entry_file}</h2>
+		 			<h2>#i18n{module.workflow.automaticassignment.task_config.label_entry_file}</h2>
 		 			<table>
 				  		<tr>
-				  			<th>#i18n{module.workflow.taskautomaticassignment.task_config.label_file_checked}</th>
-				  			<th>#i18n{module.workflow.taskautomaticassignment.task_config.label_file_name}</th>
+				  			<th>#i18n{module.workflow.automaticassignment.task_config.label_file_checked}</th>
+				  			<th>#i18n{module.workflow.automaticassignment.task_config.label_file_name}</th>
 				  		</tr>
 					 	<#list list_entries_file as entry>
 						  	<tr>
@@ -202,7 +202,7 @@
 		 		</div>
 			</#if>
 		 	<p>
-				<label for="view_record">#i18n{module.workflow.taskautomaticassignment.task_config.label_view_record} :</label>
+				<label for="view_record">#i18n{module.workflow.automaticassignment.task_config.label_view_record} :</label>
 				<input type="checkbox" name="view_record" id="view_record" value="1" 
 					<#if config?exists && config.viewRecord>
 						checked="checked"
@@ -210,15 +210,15 @@
 				/>
 			    <br/>
 			    <label>&nbsp;</label>
-				#i18n{module.workflow.taskautomaticassignment.task_config.label_view_record_comment}
+				#i18n{module.workflow.automaticassignment.task_config.label_view_record_comment}
 			</p>
 			<div id="record">
 				<p>
 					<label>&nbsp;</label>
-					#i18n{module.workflow.taskautomaticassignment.task_config.label_freemarker_link_view_record}
+					#i18n{module.workflow.automaticassignment.task_config.label_freemarker_link_view_record}
 				</p>
 				<p>
-			    	<label for="label_link_view_record">#i18n{module.workflow.taskautomaticassignment.task_config.label_label_link_view_record} * :</label>
+			    	<label for="label_link_view_record">#i18n{module.workflow.automaticassignment.task_config.label_label_link_view_record} * :</label>
 			    	<#if config?exists && config.labelLinkViewRecord?has_content>
 		     			<input type="text" name="label_link_view_record" id="" size="80" value="${config.labelLinkViewRecord}" maxlength="255"/>
 			     	<#else>
@@ -226,7 +226,7 @@
 			     	</#if>		
 				   	<br/>
 					<label>&nbsp;</label>
-					#i18n{module.workflow.taskautomaticassignment.task_config.label_label_link_view_record_comment}
+					#i18n{module.workflow.automaticassignment.task_config.label_label_link_view_record_comment}
 				</p>
 			</div>
 		</div>
