--- a/webapp/WEB-INF/templates/admin/plugins/workflow/modules/automaticassignment/task_config.html
+++ b/webapp/WEB-INF/templates/admin/plugins/workflow/modules/automaticassignment/task_config.html
@@ -85,9 +85,9 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;
 					#i18n{module.workflow.assignment.task_assignment_config.label_notification} :
 					<#if workgroup.config?exists>
-						<@combo name="id_mailing_list_${workgroup.item.key}" items=mailing_list default_value=workgroup.config.idMailingList />
+						<@comboSorted name="id_mailing_list_${workgroup.item.key}" items=mailing_list default_value=workgroup.config.idMailingList />
 					<#else>
-						<@combo name="id_mailing_list_${workgroup.item.key}" items=mailing_list default_value="-1" />
+						<@comboSorted name="id_mailing_list_${workgroup.item.key}" items=mailing_list default_value="-1" />
 					</#if>
 					<br />
 		   		</#list>
