WORKFLOWAUTOMATICASSIGNMENT-26 : Add comments and change labels for task Automatic assignment
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/directory-form-workflow/module-workflow-automatic-assignment@44530 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/admin/plugins/workflow/modules/automaticassignment/modify_entry_assignment.html
+++ b/webapp/WEB-INF/templates/admin/plugins/workflow/modules/automaticassignment/modify_entry_assignment.html
@@ -6,7 +6,7 @@
 		<#if entry??>
 		<input type="hidden" name="id_entry" value="${entry.idEntry}" />
 	 	<div>
-	 		<label for="value"> #i18n{module.workflow.automaticassignment.modify_entry_assignment.label.value}: </label>		 	
+	 		<label for="value"> #i18n{module.workflow.automaticassignment.modify_entry_assignment.label.entry_value} ${entry.title} : </label>		 	
 		 	<select name="value" id="value">
 				<#list entry.fields as field>
 					<option  value="${field.idField}">
@@ -25,6 +25,8 @@
 			</select>
 			
 			<input type="submit" value="#i18n{module.workflow.automaticassignment.modify_entry_assignment.add_button}" />
+			<br />
+			#i18n{module.workflow.automaticassignment.modify_entry_assignment.label.comment}
 			<br /> <br />
 			<table>
 				<tr>
