--- a/webapp/WEB-INF/templates/admin/plugins/workflow/modules/automaticassignment/task_config.html
+++ b/webapp/WEB-INF/templates/admin/plugins/workflow/modules/automaticassignment/task_config.html
@@ -32,6 +32,9 @@
    				<br/>
  			 <label>&nbsp;</label> #i18n{module.workflow.automaticassignment.task_config.label_directory_comment}
 	 	</p>
+	 	<p>
+	 		#i18n{module.workflow.automaticassignment.task_config.label_directory_comment_assign}
+	 	</p>
 	 	<#if config??>	
 	 		<#if config.entryList??>
 	 			<div class="highlight-box">
