--- a/webapp/WEB-INF/templates/admin/plugins/workflow/modules/automaticassignment/task_config.html
+++ b/webapp/WEB-INF/templates/admin/plugins/workflow/modules/automaticassignment/task_config.html
@@ -32,7 +32,7 @@
              <div class="controls">
                 <div class="input-append">
                       <@combo 'directory' config.idDirectory directory_list />
-                      <button class="btn btn-primary" type="button" name="apply" title="#i18n{module.workflow.automaticassignment.task_config.update_button}">
+                      <button class="btn btn-primary" type="button" name="apply"  value="apply"  title="#i18n{module.workflow.automaticassignment.task_config.update_button}">
                           <i class="icon-ok icon-white"></i>
                       </button>
                 </div>
